--- a/src/components/Landing/Landing.scss
+++ b/src/components/Landing/Landing.scss
@@ -1,12 +1,15 @@
 main {
   height: 100vh;
-
-  background-attachment: fixed;
   position: relative;
 
   .bg {
     height: 100%;
     background: url(bg.jpg) no-repeat center/cover;
+    background-attachment: fixed;
+  }
+
+  .bg-layer {
+    height: 100%;
     background-color: rgba($color: #282c34, $alpha: 0.8);
     display: flex;
     align-items: center;
